--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shae Game - How Pretty You Have Been</title>
+    <title>ShGame</title>
     <style>
         body {
             margin: 0;
@@ -130,7 +130,7 @@
     <div class="game-container">
         <div class="sidebar">
             <div class="stopwatch">
-                <h2>How Pretty You Have Been</h2>
+                <h2>How Long You Have Been</h2>
                 <div class="time-display" id="timeDisplay">00:00:00</div>
             </div>
 
